<resources>
    <string name="app_name">CalculatorCw</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="mul">x</string>
    <string name="sub">-</string>
    <string name="sum">+</string>
    <string name="div">÷</string>
    <string name="result">=</string>
    <string name="delete">DEL</string>
    <string name="dot">.</string>
    <string name="reset">C</string>
    <string name="ans">ANS</string>
    <string name="cos">Cos</string>
    <string name="sin">Sin</string>
    <string name="tan">Tan</string>
    <string name="sqrt">√</string>


</resources>
