<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giovanni.calculator.Calculator">


    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button0"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginBottom="24dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="68dp"
        android:layout_height="136dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_dot" />

    <Button
        android:id="@+id/button1"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginLeft="24dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button_sum"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/sum"
        app:layout_constraintBottom_toTopOf="@+id/button_result"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/sub"
        app:layout_constraintBottom_toTopOf="@+id/button_sum"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/div"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button_c" />

    <Button
        android:id="@+id/button_mul"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/mul"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button_div" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/button_sub"
        app:layout_constraintStart_toEndOf="@+id/button_mul" />
</android.support.constraint.ConstraintLayout>

